force-app/main/default/objects/Inspection__c/fields/Access_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Access_Contact_Email__c</fullName>
    <description>Gives the Access Contact&apos;s Email address</description>
    <inlineHelpText>Email for the Access Contact who will be coordinating between the GC and the Seller.</inlineHelpText>
    <label>Access Contact Email</label>
    <type>Email</type>
</CustomField>