force-app/main/default/objects/Inspection__c/fields/Access_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Access_Contact_Name__c</fullName>
    <description>Gives the Access Contact&apos;s name</description>
    <inlineHelpText>This is the Source Agent&apos;s Name</inlineHelpText>
    <label>Access Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>