force-app/main/default/objects/Inspection__c/fields/Access_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Access_Contact_Phone__c</fullName>
    <description>Gives the Access Contact&apos;s phone number</description>
    <inlineHelpText>This is the Source Agent&apos;s Phone</inlineHelpText>
    <label>Access Contact Phone</label>
    <type>Phone</type>
</CustomField>