force-app/main/default/objects/Inspection__c/fields/Actual_Rehab_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rehab_Complete_Date__c</fullName>
    <formula>Initial_Rehab_ID__r.Actual_Rehab_Complete_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Rehab Complete Date</label>
    <type>Date</type>
</CustomField>