force-app/main/default/objects/Inspection__c/fields/Amount_Submitted_GC__c.field-meta.xml
<CustomField>
    <fullName>Amount_Submitted_GC__c</fullName>
    <label>Amount Submitted - GC</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>