force-app/main/default/objects/Inspection__c/fields/Analyst__c.field-meta.xml
<CustomField>
    <fullName>Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the Analyst&apos;s name</description>
    <inlineHelpText>Lookup to User</inlineHelpText>
    <label>Analyst/Underwriter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HHM_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>