force-app/main/default/objects/Inspection__c/fields/Approved_Change_Order_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Change_Order_1_Amount__c</fullName>
    <label>Approved Change Order #1 Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>