force-app/main/default/objects/Inspection__c/fields/Avg_Inspection_time_in_days__c.field-meta.xml
<CustomField>
    <fullName>Avg_Inspection_time_in_days__c</fullName>
    <formula>Inspection_Period_End_Date__c  -  Inspection_Scheduled_Date__c</formula>
    <label>Avg Inspection time in days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>