force-app/main/default/objects/Inspection__c/fields/Bid_Contingency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bid_Contingency_Amount__c</fullName>
    <formula>Bid_Recommendation__c * Bid_Contingency_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Contingency (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>