force-app/main/default/objects/Inspection__c/fields/Bid_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Bid_Recommendation__c</fullName>
    <label>Bid Recommendation</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>