force-app/main/default/objects/Inspection__c/fields/Bid_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Bid_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Rejected</label>
    <type>Checkbox</type>
</CustomField>