force-app/main/default/objects/Inspection__c/fields/Bid_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bid_Status_Notes__c</fullName>
    <description>Gives the notes captured during the inspection drive</description>
    <label>Bid Status Notes</label>
    <type>TextArea</type>
</CustomField>