force-app/main/default/objects/Inspection__c/fields/Calculated_Work_Auth_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Work_Auth_Amount__c</fullName>
    <label>Calculated Work Auth Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>