force-app/main/default/objects/Inspection__c/fields/Canceled__c.field-meta.xml
<CustomField>
    <fullName>Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the inspection is Canceled</description>
    <label>Canceled</label>
    <type>Checkbox</type>
</CustomField>