force-app/main/default/objects/Inspection__c/fields/Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date__c</fullName>
    <formula>Pipeline_ID__r.Expected_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>