force-app/main/default/objects/Inspection__c/fields/Create_Vendor_Form__c.field-meta.xml
<CustomField>
    <fullName>Create_Vendor_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Vendor Form</label>
    <type>Checkbox</type>
</CustomField>