force-app/main/default/objects/Inspection__c/fields/Crimson_Work_Auth_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Crimson_Work_Auth_Form_URL__c</fullName>
    <formula>&apos;https://uat-hhm-broker.cs216.force.com/HHMCrimsonUAT/s/inspection&apos;+&apos;/&apos;+ Id+&apos;/&apos;+Name+&apos;?tabset-94c8c=2&apos;</formula>
    <label>Crimson Work Auth Form URL</label>
    <type>Text</type>
</CustomField>