force-app/main/default/objects/Inspection__c/fields/doCreateWAF__c.field-meta.xml
<CustomField>
    <fullName>doCreateWAF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doCreateWAF</label>
    <type>Checkbox</type>
</CustomField>