force-app/main/default/objects/Inspection__c/fields/dodirectorapproval__c.field-meta.xml
<CustomField>
    <fullName>dodirectorapproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>dodirectorapproval</label>
    <type>Checkbox</type>
</CustomField>