force-app/main/default/objects/Inspection__c/fields/doFinalInspection__c.field-meta.xml
<CustomField>
    <fullName>doFinalInspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doFinalInspection</label>
    <type>Checkbox</type>
</CustomField>