force-app/main/default/objects/Inspection__c/fields/Door_Code__c.field-meta.xml
<CustomField>
    <fullName>Door_Code__c</fullName>
    <description>Gives the Door code</description>
    <label>Door Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>