force-app/main/default/objects/Inspection__c/fields/doUpdatePipeline__c.field-meta.xml
<CustomField>
    <fullName>doUpdatePipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doUpdatePipeline</label>
    <type>Checkbox</type>
</CustomField>