force-app/main/default/objects/Inspection__c/fields/Due_Diligence_Period_Waived__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Period_Waived__c</fullName>
    <formula>Pipeline_ID__r.Due_Diligence_Period_Waived__c</formula>
    <label>Due Diligence Period Waived</label>
    <type>Checkbox</type>
</CustomField>