force-app/main/default/objects/Inspection__c/fields/Due_Diligence_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Start_date__c</fullName>
    <formula>Pipeline_ID__r.Due_Diligence_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Diligence Start date</label>
    <type>Date</type>
</CustomField>