force-app/main/default/objects/Inspection__c/fields/Electric_Meter__c.field-meta.xml
<CustomField>
    <fullName>Electric_Meter__c</fullName>
    <label>Electric Meter #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>