force-app/main/default/objects/Inspection__c/fields/Estimated_Move_Out_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Move_Out_at_Closing__c</fullName>
    <formula>Pipeline_ID__r.Estimated_Move_Out_at_Closing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Move Out at Closing</label>
    <type>Date</type>
</CustomField>