force-app/main/default/objects/Inspection__c/fields/Field_PM__c.field-meta.xml
<CustomField>
    <fullName>Field_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the HHM Field PM&apos;s name</description>
    <inlineHelpText>Lookup to User</inlineHelpText>
    <label>Field PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HHM_Inspection5</relationshipName>
    <type>Lookup</type>
</CustomField>