force-app/main/default/objects/Inspection__c/fields/Field_PM_Email__c.field-meta.xml
<CustomField>
    <fullName>Field_PM_Email__c</fullName>
    <formula>Repair_Estimator_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field PM Email</label>
    <type>Text</type>
</CustomField>