force-app/main/default/objects/Inspection__c/fields/Field_PM_Phone__c.field-meta.xml
<CustomField>
    <fullName>Field_PM_Phone__c</fullName>
    <description>Gives the HHM Field PM&apos;s phone number</description>
    <formula>Repair_Estimator_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field PM Phone</label>
    <type>Text</type>
</CustomField>