force-app/main/default/objects/Inspection__c/fields/Final_Rehab_Scope_Notes__c.field-meta.xml
<CustomField>
    <fullName>Final_Rehab_Scope_Notes__c</fullName>
    <label>Final Rehab Scope Notes</label>
    <type>TextArea</type>
</CustomField>