force-app/main/default/objects/Inspection__c/fields/Final_UW_Rehab_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_UW_Rehab_Amount__c</fullName>
    <formula>IF( AND( Pipeline_ID__r.Due_Diligence_Period_Waived__c = true, Is_New_Construction__c = false ), Prospect_ID__r.Initial_Rehab_Estimate__c, IF( Bid_Recommendation_Contingency__c&gt; 40000, 40000, Bid_Recommendation_Contingency__c) )</formula>
    <label>Final UW Rehab Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>