force-app/main/default/objects/Inspection__c/fields/Garage_Code__c.field-meta.xml
<CustomField>
    <fullName>Garage_Code__c</fullName>
    <description>Gives the Garage code</description>
    <label>Garage Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>