force-app/main/default/objects/Inspection__c/fields/Gas_Meter__c.field-meta.xml
<CustomField>
    <fullName>Gas_Meter__c</fullName>
    <label>Gas Meter #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>