force-app/main/default/objects/Inspection__c/fields/GC_Inspection_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>GC_Inspection_Due_Date__c</fullName>
    <description>This field gets populated with the date, 3 working days from the assignment of the GC.</description>
    <label>GC Inspection Due Date</label>
    <type>Date</type>
</CustomField>