force-app/main/default/objects/Inspection__c/fields/General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the General Contractor&apos;s name</description>
    <inlineHelpText>Lookup to Account</inlineHelpText>
    <label>General Contractor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>General Contractor</value>
        </filterItems>
        <filterItems>
            <field>Account.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Select a General Contractor</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>HHM_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>