force-app/main/default/objects/Inspection__c/fields/HOA_Comments__c.field-meta.xml
<CustomField>
    <fullName>HOA_Comments__c</fullName>
    <formula>Pipeline_ID__r.HOA_Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOA Comments</label>
    <type>Text</type>
</CustomField>