force-app/main/default/objects/Inspection__c/fields/HOA_Information_Verified__c.field-meta.xml
<CustomField>
    <fullName>HOA_Information_Verified__c</fullName>
    <formula>Pipeline_ID__r.HOA_Information_Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOA Information Verified</label>
    <type>Checkbox</type>
</CustomField>