force-app/main/default/objects/Inspection__c/fields/Initial_Rehab_ID__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rehab_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Rehab ID</label>
    <referenceTo>Initial_Rehab__c</referenceTo>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>