force-app/main/default/objects/Inspection__c/fields/Initial_Rehab_Scope_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rehab_Scope_Notes__c</fullName>
    <description>Scope notes coming from Source</description>
    <inlineHelpText>Scope notes coming from Source</inlineHelpText>
    <label>Initial Rehab Scope Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>