force-app/main/default/objects/Inspection__c/fields/Inspection_Confirmed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Confirmed_Date_Time__c</fullName>
    <label>Inspection Confirmed Date/Time</label>
    <type>DateTime</type>
</CustomField>