force-app/main/default/objects/Inspection__c/fields/Inspection_Form_Stage__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Form_Stage__c</fullName>
    <label>Inspection Form Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendor Form Completed</fullName>
            </value>
            <value>
                <fullName>Reviewer Form Completed</fullName>
            </value>
            <value>
                <fullName>Work Auth Form Completed</fullName>
            </value>
            <value>
                <fullName>Reviewer Form Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>