force-app/main/default/objects/Inspection__c/fields/Inspection_Id_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Id_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Id 18-Digit</label>
    <type>Text</type>
</CustomField>