force-app/main/default/objects/Inspection__c/fields/Inspection_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Scheduled_Date__c</fullName>
    <description>Gives the Inspection scheduled date</description>
    <label>Inspection Scheduled Date</label>
    <type>Date</type>
</CustomField>