force-app/main/default/objects/Inspection__c/fields/Inspection_Stage__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Stage__c</fullName>
    <description>Gives the Inspection stage</description>
    <label>Inspection Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
                <default>true</default>
                <label>Ordered</label>
            </value>
            <value>
                <fullName>GC Assigned</fullName>
            </value>
            <value>
                <fullName>Bid Reviewer Assigned</fullName>
            </value>
            <value>
                <fullName>Inspection Complete</fullName>
            </value>
            <value>
                <fullName>Inspection Approved</fullName>
            </value>
            <value>
                <fullName>Work Authorization Form Created</fullName>
            </value>
            <value>
                <fullName>Pending Cancel</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Property Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>