force-app/main/default/objects/Inspection__c/fields/Inspection_Stage_before_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Stage_before_Cancel__c</fullName>
    <label>Inspection Stage before Cancel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>