force-app/main/default/objects/Inspection__c/fields/Inspector_Email_address__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Email_address__c</fullName>
    <description>Gives the Inspector&apos;s email address</description>
    <formula>Inspector_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspector Email address</label>
    <type>Text</type>
</CustomField>