force-app/main/default/objects/Inspection__c/fields/Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the Inspector&apos;s name</description>
    <inlineHelpText>Lookup to Contact</inlineHelpText>
    <label>Inspector Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>HHM_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>