force-app/main/default/objects/Inspection__c/fields/Inspector_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Phone_Number__c</fullName>
    <description>Gives the Inspector&apos;s phone number</description>
    <formula>Inspector_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspector Phone Number</label>
    <type>Text</type>
</CustomField>