force-app/main/default/objects/Inspection__c/fields/Lease_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lease_Comments__c</fullName>
    <formula>Pipeline_ID__r.Lease_Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Comments</label>
    <type>Text</type>
</CustomField>