force-app/main/default/objects/Inspection__c/fields/Lease_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lease_Notes__c</fullName>
    <formula>Pipeline_ID__r.Lease_Notes__c</formula>
    <label>Lease Notes</label>
    <type>Text</type>
</CustomField>