force-app/main/default/objects/Inspection__c/fields/Leaseback__c.field-meta.xml
<CustomField>
    <fullName>Leaseback__c</fullName>
    <description>Checked to True when the lease is still active</description>
    <formula>Pipeline_ID__r.Leaseback__c</formula>
    <inlineHelpText>Checked to True when the lease is still active</inlineHelpText>
    <label>Leaseback</label>
    <type>Checkbox</type>
</CustomField>