force-app/main/default/objects/Inspection__c/fields/Leaseback_Actual_Move_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Leaseback_Actual_Move_Out_Date__c</fullName>
    <formula>Pipeline_ID__r.Leaseback_Actual_Move_Out_Date__c</formula>
    <inlineHelpText>The date the lessee actually moved out</inlineHelpText>
    <label>Leaseback Actual Move Out Date</label>
    <type>Date</type>
</CustomField>