force-app/main/default/objects/Inspection__c/fields/Lessee_Email__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Email__c</fullName>
    <formula>Pipeline_ID__r.Lessee_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lessee Email</label>
    <type>Text</type>
</CustomField>