force-app/main/default/objects/Inspection__c/fields/Lessee_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Phone_Number__c</fullName>
    <formula>Pipeline_ID__r.Lessee_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lessee Phone Number</label>
    <type>Text</type>
</CustomField>