force-app/main/default/objects/Inspection__c/fields/Market_Comparables_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Market_Comparables_Analyst__c</fullName>
    <formula>Prospect_ID__r.Market_Comparables_Analyst__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Comparables @ Analyst</label>
    <type>Text</type>
</CustomField>