force-app/main/default/objects/Inspection__c/fields/Operating_Reason__c.field-meta.xml
<CustomField>
    <fullName>Operating_Reason__c</fullName>
    <formula>Text(Property_ID__r.Operating_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating Reason</label>
    <type>Text</type>
</CustomField>