force-app/main/default/objects/Inspection__c/fields/Option_Period_Expires_Date__c.field-meta.xml
<CustomField>
    <fullName>Option_Period_Expires_Date__c</fullName>
    <formula>Pipeline_ID__r.Estimated_Due_Diligence_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Period Expires Date</label>
    <type>Date</type>
</CustomField>