force-app/main/default/objects/Inspection__c/fields/Pipeline_ID__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the Pipeline ID</description>
    <inlineHelpText>Lookup to Pipeline</inlineHelpText>
    <label>Pipeline ID</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipName>HHM_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>