force-app/main/default/objects/Inspection__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <description>Gives the Property address</description>
    <formula>Prospect_ID__r.Property_Address__c</formula>
    <inlineHelpText>Combination of Property address fields</inlineHelpText>
    <label>Property Address (Formula)</label>
    <type>Text</type>
</CustomField>