force-app/main/default/objects/Inspection__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <description>Gives the Property city</description>
    <formula>Prospect_ID__r.Property_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Corresponds to Property address record</inlineHelpText>
    <label>Property City</label>
    <type>Text</type>
</CustomField>