force-app/main/default/objects/Inspection__c/fields/Property_County__c.field-meta.xml
<CustomField>
    <fullName>Property_County__c</fullName>
    <formula>Prospect_ID__r.County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property County</label>
    <type>Text</type>
</CustomField>