force-app/main/default/objects/Inspection__c/fields/Property_Fields_Label__c.field-meta.xml
<CustomField>
    <fullName>Property_Fields_Label__c</fullName>
    <label>Property Fields Label</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>