force-app/main/default/objects/Inspection__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <description>Gives the Property State</description>
    <formula>Prospect_ID__r.Property_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Corresponds to Property address record</inlineHelpText>
    <label>Property State</label>
    <type>Text</type>
</CustomField>