force-app/main/default/objects/Inspection__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <description>Gives the Property Zip Code</description>
    <formula>Prospect_ID__r.Property_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Corresponds to Property address record</inlineHelpText>
    <label>Property Zip Code</label>
    <type>Text</type>
</CustomField>