force-app/main/default/objects/Inspection__c/fields/Prospect_ID__c.field-meta.xml
<CustomField>
    <fullName>Prospect_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the Prospect ID</description>
    <inlineHelpText>Lookup to Prospect</inlineHelpText>
    <label>Prospect ID</label>
    <referenceTo>Prospect__c</referenceTo>
    <relationshipName>HHM_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>