force-app/main/default/objects/Inspection__c/fields/Quip_Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Quip_Template_Version__c</fullName>
    <label>Template Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>v1.0</fullName>
            </value>
            <value>
                <fullName>v1.1</fullName>
                <default>true</default>
                <label>v1.1</label>
            </value>
            <value>
                <fullName>v0.9</fullName>
            </value>
            <value>
                <fullName>v0.8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>