force-app/main/default/objects/Inspection__c/fields/Reduction_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Reduction_Amount_Requested__c</fullName>
    <description>Gives the Reduction amount that is requested</description>
    <label>Reduction Amount Requested</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>